Fixed mobile layout overflow

--- a/styles.css
+++ b/styles.css
@@ -314,7 +314,7 @@ textarea {
   }
 
   #search-bar {
-    width: 100%;
+    width: 80%;
   }
 
   .header-wrapper {
@@ -338,7 +338,7 @@ textarea {
   }
 
   #search-bar {
-    width: 100%;
+    width: 95%;
   }
 
   .input-wrapper,
@@ -356,4 +356,12 @@ textarea {
   .idea-votes {
     padding: 15px;
   }
+
+  @media screen and (max-width: 500px) {
+
+    h1 {
+      font-size: 2em;
+    }
+  }
+
 }
